--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,11 +1,12 @@
 # myst requires sphinx <4
-sphinx<4
-myst-parser>=0.14.0
-sphinx-rtd-theme >= 0.5.0
+sphinx==3.5.4
+myst-parser==0.17.2
+sphinx-rtd-theme == 1.1.1
 Pygments >= 2.1.1
 funcsigs~=1.0.2
 mypy_extensions~=0.4.1
-sphinxcontrib-spelling
+sphinxcontrib-spelling==7.7.0
+docutils==0.16
 
 # jypyter notebook
 nbautoexport==0.4.0
