--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ dataclasses~=0.7; python_version <'3.7'
 importlib-resources==5.1.4;python_version<'3.7'
 fastapi==0.65.2
 uvicorn==0.14.0
-jinja2<=3.0.3
+jinja2==3.0.3
 
 # Try newer version of pytorch wheel.
 # https://download.pytorch.org/whl/cpu/torch-1.3.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
